análisis de dataset

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7d1a5222",
    "metadata": {},
    "outputs": [
@@ -57,20 +57,68 @@
       " 20  Blood_Sugar_Level    773 non-null    int64  \n",
       " 21  Stress_Detection     773 non-null    object \n",
       "dtypes: float64(5), int64(8), object(9)\n",
-      "memory usage: 133.0+ KB\n"
+      "memory usage: 133.0+ KB\n",
+      "None\n",
+      "Contamos con ,shape[0], filas (individuos) y ,shape[1], columnas\n",
+      "Existen , num_duplicados, datos duplicados\n"
      ]
     }
    ],
    "source": [
     "ds_original=pd.read_csv(\"/workspaces/Stress_detection/data/stress_detection_data.csv\")\n",
-    "ds_original.info()"
+    "print(ds_original.info())\n",
+    "\n",
+    "shape=ds_original.shape\n",
+    "print(f\"Contamos con , shape[0] , filas (individuos) y ,shape[1], columnas\")\n",
+    "\n",
+    "duplicados = ds_original.duplicated()\n",
+    "num_duplicados = duplicados.sum()\n",
+    "print(f\"Existen num_duplicados, datos duplicados\")"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "ad28477e",
    "metadata": {},
-   "source": []
+   "source": [
+    "Contamos con 22 columnas y 773 filas.\n",
+    "\n",
+    "### Datos numéricos\n",
+    "\n",
+    "- Age: The age of the individual.\n",
+    "- Sleep_Duration: The total amount of sleep an individual gets on average (in hours).\n",
+    "- Sleep_Quality: Self-reported quality of sleep on a scale (e.g., 1-5).\n",
+    "- Physical_Activity: Frequency of physical activity (e.g., number of days/week or a score).\n",
+    "- Screen_Time: The average number of hours spent on electronic screens per day.\n",
+    "- Caffeine_Intake: The average amount of caffeine consumed (e.g., cups of coffee).\n",
+    "- Alcohol_Intake: The average amount of alcohol consumed (e.g., number of drinks per week).\n",
+    "- Work_Hours: The number of hours worked per week.\n",
+    "- Travel_Time: The time spent commuting (e.g., in hours per day).\n",
+    "- Social_Interactions: The frequency of social interactions (e.g., number of social events attended).\n",
+    "- Blood_Pressure: The individual's blood pressure level (e.g., 120/80).\n",
+    "- Cholesterol_Level: The individual's cholesterol level (e.g., in mg/dL).\n",
+    "- Blood_Sugar_Level: The individual's blood sugar level (e.g., in mg/dL).\n",
+    "\n",
+    "### Datos categóricos:\n",
+    "\n",
+    "- Gender: Gender of the individual (Male/Female).\n",
+    "- Occupation: The profession or job title of the individual.\n",
+    "- Marital_Status: The marital status of the individual (e.g., Married, Single).\n",
+    "- Wake_Up_Time: The time the individual wakes up on average.\n",
+    "- Bed_Time: The time the individual goes to bed on average.\n",
+    "- Smoking_Habit: Whether the individual smokes (Yes/No).\n",
+    "- Meditation_Practice: Whether the individual practices meditation (Yes/No).\n",
+    "- Exercise_Type: The type of exercise the individual engages in (e.g., Yoga, Cardio, Strength Training).\n",
+    "- Stress_Detection: A classification or indicator of the individual's stress level (e.g., High, Medium, Low)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe9fb9f8",
+   "metadata": {},
+   "source": [
+    "No contamos con datos nulos en ninguna variable"
+   ]
   }
  ],
  "metadata": {
