--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7d1a5222",
    "metadata": {},
    "outputs": [
@@ -59,8 +59,8 @@
       "dtypes: float64(5), int64(8), object(9)\n",
       "memory usage: 133.0+ KB\n",
       "None\n",
-      "Contamos con ,shape[0], filas (individuos) y ,shape[1], columnas\n",
-      "Existen , num_duplicados, datos duplicados\n"
+      "Contamos con  773  filas (individuos) y 22 columnas\n",
+      "Existen 0 datos duplicados\n"
      ]
     }
    ],
@@ -69,11 +69,11 @@
     "print(ds_original.info())\n",
     "\n",
     "shape=ds_original.shape\n",
-    "print(f\"Contamos con , shape[0] , filas (individuos) y ,shape[1], columnas\")\n",
+    "print(f\"Contamos con  {shape[0]}  filas (individuos) y {shape[1]} columnas\")\n",
     "\n",
     "duplicados = ds_original.duplicated()\n",
     "num_duplicados = duplicados.sum()\n",
-    "print(f\"Existen num_duplicados, datos duplicados\")"
+    "print(f\"Existen {num_duplicados} datos duplicados\")"
    ]
   },
   {
@@ -82,6 +82,10 @@
    "metadata": {},
    "source": [
     "Contamos con 22 columnas y 773 filas.\n",
+    "\n",
+    "No contamos con datos duplicados.\n",
+    "\n",
+    "No contamos con datos nulos en ninguna variable.\n",
     "\n",
     "### Datos numéricos\n",
     "\n",
@@ -117,8 +121,16 @@
    "id": "fe9fb9f8",
    "metadata": {},
    "source": [
-    "No contamos con datos nulos en ninguna variable"
+    "## Análisis Exploratorio de Datos"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "307a56da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
