Analisis univariado numéricas

--- a/src/noteook_repaso.ipynb
+++ b/src/noteook_repaso.ipynb
@@ -21,8 +21,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "id": "28f82f86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Age', 'Gender', 'Occupation', 'Marital_Status', 'Sleep_Duration',\n",
+       "       'Sleep_Quality', 'Wake_Up_Time', 'Bed_Time', 'Physical_Activity',\n",
+       "       'Screen_Time', 'Caffeine_Intake', 'Alcohol_Intake', 'Smoking_Habit',\n",
+       "       'Work_Hours', 'Travel_Time', 'Social_Interactions',\n",
+       "       'Meditation_Practice', 'Exercise_Type', 'Blood_Pressure',\n",
+       "       'Cholesterol_Level', 'Blood_Sugar_Level', 'Stress_Detection'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Apertura de dataset\n",
+    "\n",
+    "ds=pd.read_csv(\"/workspaces/Stress_detection/data/stress_detection_data.csv\")\n",
+    "ds.head()\n",
+    "\n",
+    "#muestra columnas\n",
+    "ds.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f753814",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Age', 'Gender', 'Occupation', 'Marital_Status', 'Sleep_Duration',\n",
+       "       'Sleep_Quality', 'Wake_Up_Time', 'Bed_Time', 'Physical_Activity',\n",
+       "       'Screen_Time', 'Caffeine_Intake', 'Alcohol_Intake', 'Smoking_Habit',\n",
+       "       'Work_Hours', 'Travel_Time', 'Social_Interactions',\n",
+       "       'Meditation_Practice', 'Exercise_Type', 'Blood_Pressure',\n",
+       "       'Cholesterol_Level', 'Blood_Sugar_Level', 'Stress_Detection'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ver algunas filas\n",
+    "\n",
+    "ds.iloc[[0,1,4]]  #muestra filas seleccionadas\n",
+    "ds.iloc[2:4]   # rango de filas\n",
+    "\n",
+    "#Ver algunas columnas\n",
+    "ds[[\"Age\",\"Gender\"]]\n",
+    "\n",
+    "#Eliminar columna\n",
+    "ds.drop([\"Age\",\"Gender\"],axis=1)\n",
+    "\n",
+    "#Eliminar filas\n",
+    "ds.drop([0,3])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab86fa77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ver group by y merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "68d9fc86",
    "metadata": {},
    "outputs": [
     {
@@ -190,233 +276,6 @@
        "      <td>90</td>\n",
        "      <td>Low</td>\n",
        "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Age  Gender         Occupation Marital_Status  Sleep_Duration  \\\n",
-       "0   30    Male  Software Engineer         Single             7.0   \n",
-       "1   35  Female  Marketing Manager        Married             6.0   \n",
-       "2   40    Male     Data Scientist       Divorced             7.0   \n",
-       "3   35    Male  Software Engineer         Single             7.0   \n",
-       "4   29  Female            Teacher         Single             8.0   \n",
-       "\n",
-       "   Sleep_Quality Wake_Up_Time  Bed_Time  Physical_Activity  Screen_Time  ...  \\\n",
-       "0            4.0      7:00 AM  10:00 PM                2.0          4.0  ...   \n",
-       "1            3.0      6:00 AM  11:00 PM                1.0          3.0  ...   \n",
-       "2            4.0      7:00 AM  10:00 PM                2.0          4.0  ...   \n",
-       "3            4.0      7:00 AM  10:00 PM                2.0          4.0  ...   \n",
-       "4            5.0      6:30 AM  10:30 PM                3.0          2.0  ...   \n",
-       "\n",
-       "   Smoking_Habit  Work_Hours Travel_Time  Social_Interactions  \\\n",
-       "0             No           8         1.0                    5   \n",
-       "1             No           9         2.0                    3   \n",
-       "2             No           8         1.0                    5   \n",
-       "3             No           8         1.0                    5   \n",
-       "4             No           7         1.0                    4   \n",
-       "\n",
-       "   Meditation_Practice      Exercise_Type Blood_Pressure Cholesterol_Level  \\\n",
-       "0                  Yes             Cardio            120               180   \n",
-       "1                   No               Yoga            110               160   \n",
-       "2                  Yes  Strength Training            130               200   \n",
-       "3                  Yes             Cardio            120               180   \n",
-       "4                  Yes               Yoga            110               180   \n",
-       "\n",
-       "   Blood_Sugar_Level  Stress_Detection  \n",
-       "0                 90               Low  \n",
-       "1                 80            Medium  \n",
-       "2                100              High  \n",
-       "3                 90               Low  \n",
-       "4                 90               Low  \n",
-       "\n",
-       "[5 rows x 22 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Apertura de dataset\n",
-    "\n",
-    "ds=pd.read_csv(\"/workspaces/Stress_detection/data/stress_detection_data.csv\")\n",
-    "ds.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "6f753814",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Occupation</th>\n",
-       "      <th>Marital_Status</th>\n",
-       "      <th>Sleep_Duration</th>\n",
-       "      <th>Sleep_Quality</th>\n",
-       "      <th>Wake_Up_Time</th>\n",
-       "      <th>Bed_Time</th>\n",
-       "      <th>Physical_Activity</th>\n",
-       "      <th>Screen_Time</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Smoking_Habit</th>\n",
-       "      <th>Work_Hours</th>\n",
-       "      <th>Travel_Time</th>\n",
-       "      <th>Social_Interactions</th>\n",
-       "      <th>Meditation_Practice</th>\n",
-       "      <th>Exercise_Type</th>\n",
-       "      <th>Blood_Pressure</th>\n",
-       "      <th>Cholesterol_Level</th>\n",
-       "      <th>Blood_Sugar_Level</th>\n",
-       "      <th>Stress_Detection</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>35</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Marketing Manager</td>\n",
-       "      <td>Married</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6:00 AM</td>\n",
-       "      <td>11:00 PM</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yoga</td>\n",
-       "      <td>110</td>\n",
-       "      <td>160</td>\n",
-       "      <td>80</td>\n",
-       "      <td>Medium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>40</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Data Scientist</td>\n",
-       "      <td>Divorced</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>7:00 AM</td>\n",
-       "      <td>10:00 PM</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Strength Training</td>\n",
-       "      <td>130</td>\n",
-       "      <td>200</td>\n",
-       "      <td>100</td>\n",
-       "      <td>High</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>29</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Teacher</td>\n",
-       "      <td>Single</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>6:30 AM</td>\n",
-       "      <td>10:30 PM</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yoga</td>\n",
-       "      <td>110</td>\n",
-       "      <td>180</td>\n",
-       "      <td>90</td>\n",
-       "      <td>Low</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>45</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Doctor</td>\n",
-       "      <td>Married</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5:30 AM</td>\n",
-       "      <td>11:00 PM</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Cardio</td>\n",
-       "      <td>130</td>\n",
-       "      <td>220</td>\n",
-       "      <td>110</td>\n",
-       "      <td>High</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>32</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Graphic Designer</td>\n",
-       "      <td>Single</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>7:00 AM</td>\n",
-       "      <td>12:00 AM</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Aerobics</td>\n",
-       "      <td>120</td>\n",
-       "      <td>190</td>\n",
-       "      <td>85</td>\n",
-       "      <td>Medium</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
@@ -563,16 +422,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>771 rows × 22 columns</p>\n",
+       "<p>773 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     Age  Gender         Occupation Marital_Status  Sleep_Duration  \\\n",
+       "0     30    Male  Software Engineer         Single             7.0   \n",
        "1     35  Female  Marketing Manager        Married             6.0   \n",
        "2     40    Male     Data Scientist       Divorced             7.0   \n",
+       "3     35    Male  Software Engineer         Single             7.0   \n",
        "4     29  Female            Teacher         Single             8.0   \n",
-       "5     45    Male             Doctor        Married             6.0   \n",
-       "6     32  Female   Graphic Designer         Single             7.0   \n",
        "..   ...     ...                ...            ...             ...   \n",
        "768   40  Female            Teacher         Single             6.3   \n",
        "769   42    Male             Writer        Married             6.0   \n",
@@ -581,11 +440,11 @@
        "772   29  Female          Scientist         Single             6.3   \n",
        "\n",
        "     Sleep_Quality Wake_Up_Time  Bed_Time  Physical_Activity  Screen_Time  \\\n",
+       "0              4.0      7:00 AM  10:00 PM                2.0          4.0   \n",
        "1              3.0      6:00 AM  11:00 PM                1.0          3.0   \n",
        "2              4.0      7:00 AM  10:00 PM                2.0          4.0   \n",
+       "3              4.0      7:00 AM  10:00 PM                2.0          4.0   \n",
        "4              5.0      6:30 AM  10:30 PM                3.0          2.0   \n",
-       "5              3.0      5:30 AM  11:00 PM                2.0          4.0   \n",
-       "6              4.0      7:00 AM  12:00 AM                1.0          6.0   \n",
        "..             ...          ...       ...                ...          ...   \n",
        "768            4.0      7:00 AM   5:00 PM                3.0          4.0   \n",
        "769            3.7      8:00 AM   6:00 PM                3.0          4.0   \n",
@@ -594,11 +453,11 @@
        "772            4.2      8:00 AM   5:00 PM                4.0          5.0   \n",
        "\n",
        "     ...  Smoking_Habit  Work_Hours Travel_Time  Social_Interactions  \\\n",
+       "0    ...             No           8         1.0                    5   \n",
        "1    ...             No           9         2.0                    3   \n",
        "2    ...             No           8         1.0                    5   \n",
+       "3    ...             No           8         1.0                    5   \n",
        "4    ...             No           7         1.0                    4   \n",
-       "5    ...            Yes          10         2.0                    3   \n",
-       "6    ...             No           9         0.5                    2   \n",
        "..   ...            ...         ...         ...                  ...   \n",
        "768  ...             No           7         3.0                    2   \n",
        "769  ...             No           7         3.0                    2   \n",
@@ -607,11 +466,11 @@
        "772  ...            Yes           8         4.0                    3   \n",
        "\n",
        "     Meditation_Practice      Exercise_Type Blood_Pressure Cholesterol_Level  \\\n",
+       "0                    Yes             Cardio            120               180   \n",
        "1                     No               Yoga            110               160   \n",
        "2                    Yes  Strength Training            130               200   \n",
+       "3                    Yes             Cardio            120               180   \n",
        "4                    Yes               Yoga            110               180   \n",
-       "5                     No             Cardio            130               220   \n",
-       "6                     No           Aerobics            120               190   \n",
        "..                   ...                ...            ...               ...   \n",
        "768                   No               Yoga            155               235   \n",
        "769                   No  Strength Training            150               230   \n",
@@ -620,11 +479,11 @@
        "772                  Yes               Yoga            150               230   \n",
        "\n",
        "     Blood_Sugar_Level  Stress_Detection  \n",
+       "0                   90               Low  \n",
        "1                   80            Medium  \n",
        "2                  100              High  \n",
+       "3                   90               Low  \n",
        "4                   90               Low  \n",
-       "5                  110              High  \n",
-       "6                   85            Medium  \n",
        "..                 ...               ...  \n",
        "768                120            Medium  \n",
        "769                115               Low  \n",
@@ -632,45 +491,40 @@
        "771                125            Medium  \n",
        "772                115              High  \n",
        "\n",
-       "[771 rows x 22 columns]"
+       "[773 rows x 22 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Ver algunas filas\n",
+    "# Análisis de valores nulos\n",
+    "ds.isnull().sum().sort_values(ascending=False)\n",
     "\n",
-    "ds.iloc[[0,1,4]]  #muestra filas seleccionadas\n",
-    "ds.iloc[2:4]   # rango de filas\n",
-    "\n",
-    "#Ver algunas columnas\n",
-    "ds[[\"Age\",\"Gender\"]]\n",
-    "\n",
-    "#Eliminar columna\n",
-    "ds.drop([\"Age\",\"Gender\"],axis=1)\n",
-    "\n",
-    "#Eliminar filas\n",
-    "ds.drop([0,3])\n",
-    "\n",
-    "\n",
-    "\n"
+    "#Eliminación de valores nulos\n",
+    "ds.dropna()\n",
+    "ds"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f49e7532",
+   "id": "1ecdb581",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Agrupar\n",
+    "# Variables numéricas y categóricas:\n",
     "\n",
-    "ds_agrupado = player_valuations_filtered.groupby(['player_id', 'year']).agg({\n",
-    "    \"market_value_in_eur\":\"mean\"\n",
-    "}).reset_index()\n"
+    "numerical_columns = ds.select_dtypes(include=['number']).columns\n",
+    "categorical_columns = ds.select_dtypes(include=['object']).columns\n",
+    "\n",
+    "ds[categorical_columns]\n",
+    "\n",
+    "#Describe las medidas estadísticas de las variables numéricas\n",
+    "\n",
+    "ds.describe()\n"
    ]
   }
  ],
